# openai-chat

./: .env.example  .gitignore  .prettierrc  Cargo.toml  README.md  package-lock.json  package.json  tailwind.config.cjs
.github/workflows/: cargo-build.yml
client/: .eslintrc.cjs  .prettierrc.json  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.app.json  vite.config.ts
client/src/: App.vue  Models.vue  main.ts
client/src/assets/: base.css  test.html
client/src/components/: ListChats.vue  ListMessages.vue  ShowChat.vue  ShowChatTitle.vue  StoreChat.vue  StoreChatButton.vue  StoreMessage.vue
client/src/components/Forms/: ErrorMessage.vue
client/src/components/Icons/: ChevronLeftIcon.vue  ChevronRightIcon.vue  DotsIcon.vue  InfoIcon.vue  PaperAirplaneIcon.vue  PlusIcon.vue
client/src/stores/: ChatStore.ts  MessagesStore.ts
migrations/: 20231208193756_create_todos_table.sql  20231211191138_create_models_table.up.sql  20231211192159_create_chats_table.sql  20231211192159_create_chats_table.up.sql  20231211192206_create_chat_messages_table.sql  20231211192206_create_messages_table.up.sql
src/: database.rs  dive.rs  logging.rs  main.rs  models.rs  state.rs
src/db/: chat.rs
src/http/: handlers.rs  mod.rs  routing.rs  validation.rs
src/http/handlers/: chat.rs  internal.rs  mod.rs  web.rs
src/http/handlers/api/: assistant_message.rs  chats.rs  messages.rs  mod.rs  models.rs  todos.rs
src/http/requests/: chats.rs  messages.rs  mod.rs  todos.rs
src/models/: chat.rs  message.rs  mod.rs  model.rs  todo.rs
templates/: base.html  chat.html  help.html  home.html  todo-form.html  todo-list.html
templates/errors/: 404.html
