[package]
name = "openai-chat"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
axum = "0.7.4"
tokio = { version = "1.35.1", features = ["full"] }
tokio-stream = { version = "0.1.14", features = ["full"] }
axum-streams = { version = "0.12.0", features = ["json", "protobuf", "text"] }
tower = "0.4.13"
tower-http = { version = "0.5.1", features = ["fs", "normalize-path", "cors"] }
futures = "0.3"
dotenv = "0.15.0"
fern = "0.6.2"
chrono = { version = "0.4.31", features = ["serde"] }
colored = "2"
openai_dive = { version = "0.4", features = ["stream"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.111"
sqlx = { version = "0.7.3", default_features = false, features = [
    "runtime-tokio-native-tls",
    "mysql",
    "macros",
    "chrono",
] }
validator = { version = "0.16.1", features = ["derive"] }
